[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/EggMaster/EggMaster.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EggMaster/ShootyThing.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EggMaster/EggMaster.gd" type="Script" id=3]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 133.004

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 14 )

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunY:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 8, -37 ), Vector2( 8, -38 ), Vector2( 8, -39 ), Vector2( 8, -39 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunY:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 8, -38 ), Vector2( 8, -37 ), Vector2( 8, -38 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EggMaster" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )
speed = 1950
jumpForce = 195
cooldownTime = 0.7

[node name="ScaleHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
position = Vector2( 0, -19 )
texture = ExtResource( 1 )
hframes = 8

[node name="Jumper" type="RayCast2D" parent="ScaleHelper"]
visible = false
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( -15, 0 )

[node name="PlayerDetection" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 1 )

[node name="Sight" parent="PlayerDetection" index="1"]
position = Vector2( 0, -18 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1, -15 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -14 )
shape = SubResource( 3 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 8, -38 )

[node name="Sprite" type="Sprite" parent="Gun"]
position = Vector2( 6, 0.5 )
texture = ExtResource( 2 )

[node name="End" type="Position2D" parent="Gun"]
position = Vector2( 21, 1 )

[node name="GunY" type="Position2D" parent="."]
position = Vector2( 8, -37 )

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Hurt" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 6 )

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurt"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]

[editable path="PlayerDetection"]
[editable path="Hurtbox"]
